--- a/html/eastern_philosophy.html
+++ b/html/eastern_philosophy.html
@@ -27,10 +27,9 @@
 
 	<br>
 	<b>Curriculum - Comprehensive study of Indian philosophy</b> <br>
-	>Brahma Sutras(<a href="https://estudantedavedanta.net/Brahma%20Sutras%20-%20According%20to%20Sri%20Sankara%20by%20Swami%20Vireswarananda%20[Sanskrit-English].pdf">Shankara</a>; Ramanuja): Vedas & Upanishads (narrow selection to most relevant)<br>
+	>Brahma Sutras(<a href="https://estudantedavedanta.net/Brahma%20Sutras%20-%20According%20to%20Sri%20Sankara%20by%20Swami%20Vireswarananda%20[Sanskrit-English].pdf">Shankara</a>; Ramanuja): <br>
 	&thinsp;>Vedas are not really studied anymore, fairly archaic <br>
-	&thinsp;>10 Upanishads: Isha, Kena, Katha, Chandogya, Mundaka, Brihadaranyaka, Prasna, Mandukya, Taittiriya, Aitareya <br>
-	&thinsp;Prof included parama-hamsa <br>
+	>10 Primary Upanishads: Isha, Kena, Katha, Chandogya, Mundaka, Brihadaranyaka; Parama-hamsa; Prasna, Mandukya, Taittiriya, Aitareya <br>
 	>Baghavad Gita (Shankara; Ramanuja) <br>
 	>Patanjali: Yoga Sutras - Uses Samkhya metaphysics <br>
 	>Optional schools (Samkhya - Samkhyakarika, Jainism) <br><br>
