--- a/html/western_philosophy.html
+++ b/html/western_philosophy.html
@@ -23,6 +23,26 @@
 <div class="centerpiece">
 <div1 >
 	
+	<b>Curricculum for Western Philosophy - Selected from Great Books of the Western World</b> <br>
+	>Homer - The Iliad & The Odyssey <br>
+	>Plato <br>
+	>Aristotle <br>
+	>Hippocrates - The hippocratic corpus <br>
+	>Archimedes <br>
+	>Epictetus - The Dicourses <br>
+	>Marcus Aurelius - Meditations <br>
+	>Virgil - Aeneid, Georgics <br>
+	>Plotinus <br>
+	>Dante - The Divine Comedy <br>
+	>Shakespeare <br>
+	>Descartes <br>
+	>Kant <br>
+
+
+	<br><br>
+	<b>Arabic Philosophy</b> <br>
+	>Avicenna <br>
+	>Averroes <br>
 
 </div1>
 
