--- a/html/philosophical_ideas.html
+++ b/html/philosophical_ideas.html
@@ -46,6 +46,8 @@
 		<br> I'm starting with eastern philosophy cause it's cooler, but swap to plato/aristotle as I crave it. Acknowledge it'll be tougher as I've kinda covered India before
 	</p>
 
+	<h1>Current Library</h1><br>
+
 	<h1><a href="../html/eastern_philosophy.html">Eastern Philosophy</a></h1>
 	<h2>Hinduism/Brahmanism - The shared basic ideas of the philosophical traditions of the Indian subcontinent </h2>
 	<h2>Shankara</h2>
