Philosophy origin of thoughts

--- a/html/philosophical_ideas.html
+++ b/html/philosophical_ideas.html
@@ -88,7 +88,61 @@
 	<p>Partially inspired by Berserk. "At all levels, astral and celestial theology was absorbed by Christianity and popular magic did not disappear; it was merely Christianized as saints replaced nature spirits" A History of Western Astrology Volume II p.2</p>
 	<p>What use is there in studying the classical arts: astrology, other examples idrk rn</p>
 	<h2>^The transition from Polytheism -> Monotheism -> non-theism -> ?????????</h2>
-	<p>The evolution of thinking, what questions needed to be solved  per a certain era. Logically tracing lines of thinking with hindsight</p>
+	<p>The evolution of thinking, what questions needed to be solved  per a certain era. Logically tracing lines of thinking with hindsight</p> <br>
+
+
+
+	<h1>Dr. K's Guide to Doin' Stuff</h1>
+	<p><b>The Three-fold model of motivation:</b> <br>
+		<b>>Intent: </b> Having intrinsic goals will lead to more success than those acquired extrinsically <br>
+		<b>>Resistance: </b> Though we may intend, there can be some difficulty to address between intending and actually doing. <br>
+		&thinsp;>Emotional <br>
+		&thinsp;>Egotic - Ahamkara <br>
+		<b>>Action: Following through on intent</b> <br>
+	</p>
+
+	<p><b>Origin of Thoughts</b> <br>
+		1>Reflex/Instinct - Automatic and happend without intention <br>
+		2>Habit - Trained action that becomes automatic <br>
+		3>Thought - Actions originate from thoughts <br> 
+		&thinsp;>If we want to control our actions, strengthening the mind to create the right kinds of action generating thoughts is a more foundational angle. <br>
+	</p>
+
+	<p><b>Origin of Motivation</b> <br>
+		>What is motivation? Motivation != Desire; Motivation != Habit, though it helps; <br>
+		>Motivation is the ability to hold one thought persistently in the mind. The <b>One-Pointed Mind</b>, if a goal is held for a long time it will lead behavior in that direction naturally  <br>
+		>Dharana, focusing technique for training the one-pointed mind. 
+	</p>
+
+	<p><b>How to Concentrate</b> <br>
+		>There are three fundamentals operations of the mind, that can be strengthened with dedicated meditative practices <br>
+		&thinsp;><b>The ability to direct the mind</b>: Directing thought meditation (selecting various objects to direct attention, shift when thoughts begin to drift) <br>
+		&thinsp;><b>The ability to let go of a thought in the mind:</b> Pratyahara(sensory withdrawal) <br>
+		&thinsp;><b>The ability to hold a thought in the mind:</b>  Dharana<br>
+		+Awareness of thought meditation <br>
+	</p>
+
+	<p><b>Indriyas</b> <br>
+		How does thought come about? A major answer is the Indriyas, <b>sensory impressions</b> <br>
+		A sensory impression gets attached to an <b>emotional reaction</b> and gets laid down, becoming a "thought creating machine", or samskara <br>
+		Digesting that samskara can help alter thinking by removing unwanted thought generators, and we can also implant good thought generators <br>
+		For completeness, also consider transcendental thought, or some intriguing thought tied to the self without any sensory or emotional origin. <br>
+	</p>
+
+	<p><b>Pratyahara</b> <br>
+		>The more attention is devoted to one sensory organ, the more powerful it becomes. Removing organs increase the ability of the remainder <br>
+		>Light metaphor for attention: lightbulb; flashlight; laser beam. The narrower our focus, the stronger our output <br>
+		>Pratyahara is a technique which specifically increases our attentive capabilities; control the mind through control of the sensory organs <br>
+		>When solving boredom with entertainement, we rely on external sources to pull our attention to something, rather than relying on ourselves to direct our attention. In time, we lose this ability to direct our attention, and so meditative training is one answer to strengthening this. <br>
+	</p>
+
+	<p><b>Cognitive Drains</b> <br>
+		>The more things you deem of importance and carry mentally, the more drain is <br>
+		>For each mental attachement to an idea/task/resolve/whatever, there is some mental component there being taken up leading to less available energy. <br>
+		>This could also be considered karmic <br>
+		>Two solutions: Satisfaction or grief <br>
+	</p>
+
 
 </div1>
 
