Food ideas, counting protein

--- a/html/diet.html
+++ b/html/diet.html
@@ -57,17 +57,36 @@
 >Brown Sugar, White Sugar, Vanilla Extract
 
 
-
 <br><br>
 <h2>Cooking Strats</h2>
 ><b>Basic Template</b>: Seasoning Technique -> Protein[Chicken, Beef, Pork, Turkey] -> Form Factor[Sandwich/Salad/Over Rice/Pasta/Wrap] -> Condiments/Toppings[Sauce, Herb, Pickled Veggies, Chili Oil, Salsa, Salad Dressing] 
 <br>
 
-<h3>Freezing to avoid having food go bad</h3>
-><b>Freezing Meat <a href="https://youtu.be/YQc4vxdHmpY">Link</a>: </b> Freezer Bags[Thin cut chicken; Sausage Mix <a href="../images/Recipes/northern-thai-sausage.png"> Thai</a>; Portion Sized Meat; Stir Fry] <br>
+<h3>Freezing to avoid having food go bad - Use reusable glass freezer containaers</h3>
+><b>Freezing Meat <a href="https://youtu.be/YQc4vxdHmpY">Link</a>: </b> [Thin cut chicken; Sausage Mix <a href="../images/Recipes/northern-thai-sausage.png"> Thai</a>; Portion Sized Meat; Stir Fry] <br>
 ><b>Freezing Vegetables <a href="https://youtu.be/XlndcLo3j7I">Link</a> </b> Stir fry filler; Meal Side <br>
->I'd like to continue expanding my knowledge of freezing techniques, get to the point where an antiquity man would be jealous of me
-</div1>
+>I'd like to continue expanding my knowledge of freezing techniques, get to the point where an antiquity man would be jealous of me <br>
+
+
+
+<br><br>
+<b>Strategy:</b> Two reasons to freeze items. <br>
+1 Backup ingredients that don't need monitoring until they are needed, <br>
+2. Uncommon items: ex. Pizza ingredients; <br>
+3. Pre-prep meals: Dumplings, frozen meal of some kind <br>
+&thinsp;>Other additions: Butter, Juice, Stock cube tray <br>
+
+<br>
+>Categories of [1]: Protein, Veggie, Bread. <br>
+&thinsp;>Breads are easy, rice and potatoes are stored even w/o freezer. Primary use: Storing baguettes that will be consumed after delay, maybe buns <br>
+&thinsp;>Protein source for when fridge protein is run out, and groceries are not yet done. Must be cycled within 3 months <br>
+&thinsp;&thinsp;>Chicken Thights, Sausage, Some cut of steak <br>
+&thinsp;>Veggie: Most multivariable. Meal Side or addition. Broccoli, Green beans, Asparagus, Corn, Peas, Onion, Pepper, Ginger  <br>
+&thinsp;&thinsp;>Container 1: Onion/Pepper stir fry mix; <br> &thinsp;&thinsp;>Bagged: Corn, Peas. <br> &thinsp;&thinsp;>Maybe container 2: Broccoli, Asparagus, Cauliflower <br>
+
+<br>
+>[2]Pint jar pizza dough
+
 
 <h2>Fermentation Recipe - <a href="https://youtu.be/ZghX4Mrg7kw">Video</a> I've found helpful</h2>
 >1.Calculate the total weight of water + food <br>
@@ -89,6 +108,29 @@
 &emsp; Chili/Pepper Powder: 130f til cracker dry
 &emsp; Garlic & Onion: 130f for 8-12 hours
 >Blend result <br>
+
+
+<br>
+<h1>Nutritional Planning </h1>
+2024-06-20
+>Protein Intake: 0.8g/kg to 1.8kg/kg of body weight. Some sources suggest someone highly active consumes from 1.8 to 2 g/kg of body weight <br>
+>My ratio of choice shall be 1.2g/kg for now, free to adjust as desired. Mainly considering limiting meat consumption, while having enough energy to exercise <br>
+>160lbs => 72.5kg * 1.2g/kg = 87g of protein per day. Division: 30/30/20 <br>
+>The tricky part is this, how much protein is in what you're eating? A tool <a href="https://fdc.nal.usda.gov/">https://fdc.nal.usda.gov/</a> <br>
+&thinsp;Meat rests between 18~20g of protein per 100g. Meaning 87gs of protein intake a day requires 480 grams of meat. <br>
+&thinsp;Non-meat supplements: 6g per egg; Beans: ; Lentils: ; could try tofu <br>
+
+
+
+
+
+
+</div1>
+
+
+
+
+
 
 </body>
 </html> 
