some changes, media

--- a/html/calendar.html
+++ b/html/calendar.html
@@ -29,7 +29,7 @@
 <table style="margin-left: auto; margin-right: auto; text-align: center;">
 	<b>June:</b>
 	<thead>
-		<tr> <th style="width:150px">Sun</th> <th style="width:150px">Mon</th> 
+		<tr> <th style="width:150px">Sun </th> <th style="width:150px">Mon</th> 
 			<th style="width:150px">Tue <br>Water Plants</th> 
 			<th style="width:150px">Wed</th> <th style="width:150px">Thu</th> <th style="width:150px">Fri <br> Laundry</th> 
 			<th style="width:150px">Sat <br>Water Plants</th> </tr>
@@ -42,6 +42,13 @@
 		<tr> <td>23/30</td> <td>24</td> <td>25</td> <td>26</td> <td>27</td> <td>28</td> <td>29</td> </tr>
 	</tbody>
 </table>
+
+<b>Items</b> <br>
+>Laundry - Clothes, Sheets, Towels<br>
+>Groceries - List, Shopping, DailyCooking, Prep <br>
+>Cleaning - Kitchen, Room & Sweep weekly <br>
+>Clean bathroom <br>
+
 </div1>
 
 
