--- a/html/diet.html
+++ b/html/diet.html
@@ -48,7 +48,8 @@
 <h2>Food to try making</h2>
 >Rice pilaf main (add meat and veggies, cook in pot) <br>
 >Imroved rice: Veggie/Chicken Broth(mixed with water), Herbs, Lime, Garlic/Onion Powder, Chili or Curry seasoning. <br>
->Adobo Chicken & Adobo Fried Rice
+>Adobo Chicken & Adobo Fried Rice <br>
+>Chicken Tinga <a href="https://youtu.be/DqTsb9N3cqY">Recipe</a> <br>
 
 <br><br>
 <h2>Pantry Contents</h2>
@@ -121,8 +122,10 @@
 &thinsp;Non-meat supplements: 6g per egg; Beans: ; Lentils: ; could try tofu <br>
 
 
-
-
+<br><br>
+<b>Catherine Drink List</b>
+>Mojito <br>
+>Pina Colada <br>
 
 
 </div1>
