--- a/html/media.html
+++ b/html/media.html
@@ -123,15 +123,24 @@ Anime:
 >Selection: <br>
 
 <br>
-<b>2024 Games List</b> <br>
->Signalis <br>
->Persona 3 Reload <br>
+<b>Games List</b> <br>
 >Risk of Rain Returns <br>
->Yakuza Kiwami 1 <br>
+>Persona 3 Reload <br>
+>Signalis <br>
 >Elden Ring <br>
 >Dragon Quest XI <br>
->Nier Replicant <br>
 >FF7R <br>
+>Yakuza Kiwami 1 <br>
+>Nier Replicant <br>
+>Flower <br>
+>Oblivion <br>
+-----------<br>
+>Chrono Cross <br>
+>Katamari Damacy <br>
+>13 Sentinels <br>
+>Yakuza 7 <br>
+
+
 
 <br>
 <h2>\Favorites/</h2>
