--- a/html/diet.html
+++ b/html/diet.html
@@ -27,14 +27,14 @@
 >Hamburgers <br>
 >Pasta Sauce <br>
 >Tacos/Tostadas <br> 
->Pulled Pork - <a href="../images/Recipes/pulled-pork.png">Recipe</a><br>
+>Pulled Pork - <a href="../images/Recipes/pulled-pork.png">Recipe</a> ;try different flavor profiles<br>
 >Slow Cooker Roast Beef <br>
 >Casserole Mac n' Cheese <br>
 >Oatmeal <br>
 >Stir Fry <br>
 >Sandwich <br>
 >Shepherd's Pie - <a href="https://youtu.be/gAG3S55D9C4">Cast Iron</a><br>
->Bread <br>
+>Baguette : Adam Ragusea video <br>
 
 <br>
 ><b>Sides/Ingredients</b> <br>
@@ -50,6 +50,12 @@
 >Imroved rice: Veggie/Chicken Broth(mixed with water), Herbs, Lime, Garlic/Onion Powder, Chili or Curry seasoning. <br>
 >Adobo Chicken & Adobo Fried Rice <br>
 >Chicken Tinga <a href="https://youtu.be/DqTsb9N3cqY">Recipe</a> <br>
+>Dinner rolls <br>
+>Carnitas - <a href="../images/Recipes/Carnitas.png">Recipe</a> <br>
+>Gingersnaps - <a href="https://www.allrecipes.com/recipe/10365/grandmas-gingersnap-cookies/">Recipe</a> <br>
+>Oatmeal Cookies - <a href="../images/Recipes/Brown Sugar Oatmeal Cookies.png">Recipe</a> <br> 
+>Mom's Carrot Cake Cookies <a href="../images/Recipes/Mom's Carrot Cake Cookies 1.jpg">Part 1</a> <a href="../images/Recipes/Mom's Carrot Cake Cookies 2.jpg">Part 2</a><br>
+>Chicken Stock - Freeze veggies/meat so it keeps longer til ready to make<br>
 
 <br><br>
 <h2>Pantry Contents</h2>
