--- a/html/blog.html
+++ b/html/blog.html
@@ -23,6 +23,15 @@
 <div class="centerpiece">
 <div1 style="text-align:center">
 
+<b>2024-07-02</b> <br>
+>Discussing art, a few ideas worth writing down <br>
+>Dichotomy of replayability focus vs single playthrough cinematic experience <br>
+>Making a game that doesn't fit into pre-defined categories. Way of thinking probably reduces pool of available ideas <br>
+>Start with a core good idea, and expand it from there. Only worry about applying descriptors once it's been made <br>
+>That said, broad descriptors can help narrow the scope of a project to something manageable <br>
+>Lean on things you love for inspiration, no need/ability to be entirely original. <br>
+>Make the art you want to see/play <br>
+
 <b>2024-06-08</b> <br>
 >Limiting the scope of activities to actually get stuff done. <br>
 >"Creativity is subtraction"; "In this age of information abundance and overload, those who get ahead will be the folks who figure out what to leave out, so they can concentrate on what’s really important to them. Nothing is more paralyzing than the idea of limitless possibilities. The idea that you can do anything is absolutely terrifying." <br>
