--- a/html/diet.html
+++ b/html/diet.html
@@ -35,6 +35,7 @@
 >Sandwich <br>
 >Shepherd's Pie - <a href="https://youtu.be/gAG3S55D9C4">Cast Iron</a><br>
 >Baguette : Adam Ragusea video <br>
+>Burrito Bowls: Rice, Chicken, Beans, Corn + pickled vegs, lettuce, tomato/salsa
 
 <br>
 ><b>Sides/Ingredients</b> <br>
