--- a/html/media.html
+++ b/html/media.html
@@ -129,6 +129,9 @@ Anime:
 >Signalis <br>
 >Elden Ring <br>
 >Dragon Quest XI <br>
+>13 Sentinels <br>
+>Xenoblade Chronicles <br>
+
 >FF7R <br>
 >Yakuza Kiwami 1 <br>
 >Nier Replicant <br>
@@ -137,7 +140,6 @@ Anime:
 -----------<br>
 >Chrono Cross <br>
 >Katamari Damacy <br>
->13 Sentinels <br>
 >Yakuza 7 <br>
 
 
