--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+hj<!DOCTYPE html>
 <html>
 <head>
 	<title>The Wizard's Personal Website</title>
@@ -65,6 +65,10 @@
 
 			<b><a href="html/botany.html">Botany</a></b>  <br>
 			<b><a href="html/fighting-game.html">Fighting Game Wiki</a></b>  <br>
+
+			<h3>Creations</h3>
+			<b><a href="html/gamedev.html">Gamedev</a></b> <br>
+
 			<img src="Gifs/shrooms.gif" style="width:300px;"> <br>
 			
 		</div2>
