Game programming patterns link added

--- a/html/diet.html
+++ b/html/diet.html
@@ -35,7 +35,7 @@
 >Sandwich <br>
 >Shepherd's Pie - <a href="https://youtu.be/gAG3S55D9C4">Cast Iron</a><br>
 >Baguette : Adam Ragusea video <br>
->Burrito Bowls: Rice, Chicken, Beans, Corn + pickled vegs, lettuce, tomato/salsa
+>Burrito Bowls: <a href="https://www.allrecipes.com/recipe/146000/lime-cilantro-rice/">Rice</a>, <a href="https://gimmedelicious.com/the-best-taco-grilled-chicken/">Chicken</a>, 		Beans, Onions, Peppers, Corn + garnish: pickled vegs, lettuce, tomato/salsa.
 
 <br>
 ><b>Sides/Ingredients</b> <br>
@@ -56,7 +56,7 @@
 >Gingersnaps - <a href="https://www.allrecipes.com/recipe/10365/grandmas-gingersnap-cookies/">Recipe</a> <br>
 >Oatmeal Cookies - <a href="../images/Recipes/Brown Sugar Oatmeal Cookies.png">Recipe</a> <br> 
 >Mom's Carrot Cake Cookies <a href="../images/Recipes/Mom's Carrot Cake Cookies 1.jpg">Part 1</a> <a href="../images/Recipes/Mom's Carrot Cake Cookies 2.jpg">Part 2</a><br>
->Chicken Stock - Freeze veggies/meat so it keeps longer til ready to make<br>
+>Chicken Stock - Freeze veggies/meat so it keeps longer til ready to make <br>
 
 <br><br>
 <h2>Pantry Contents</h2>
