--- a/html/gamedev.html
+++ b/html/gamedev.html
@@ -26,6 +26,7 @@
 
 <h2>Video Game Development Homepage</h2>
 
+Here is the text to reference: <a href="http://gameprogrammingpatterns.com/contents.html">Game Programming Patterns</a> by Robert Nystrom <br><br>
 
 <b>Here are some creative ideas I've jotted down</b> <br>
 
