some reformatting changes

--- a/html/blog.html
+++ b/html/blog.html
@@ -23,6 +23,10 @@
 <div class="centerpiece">
 <div1 style="text-align:center">
 
+<b>2024-07-05</b> <br>
+>Statements worth becoming thought generating machines <br>
+>Weed, seperate spaces
+
 <b>2024-07-02</b> <br>
 >Discussing art, a few ideas worth writing down <br>
 >Dichotomy of replayability focus vs single playthrough cinematic experience <br>
