--- a/html/calendar.html
+++ b/html/calendar.html
@@ -25,7 +25,26 @@
 
 <b>Legend of Daily Achievements:</b> W=Workout; R=Run; M=Meditation; S=Stretch; D=Draw; wakeupby9; gotobedby1<br> 
 
-<br> 
+<br>
+<table style="margin-left: auto; margin-right: auto; text-align: center;">
+	<b>July:</b>
+	<thead>
+		<tr> <th style="width:150px">Sun </th> <th style="width:150px">Mon</th> 
+			<th style="width:150px">Tue <br>Water Plants</th> 
+			<th style="width:150px">Wed</th> <th style="width:150px">Thu</th> <th style="width:150px">Fri <br> Laundry</th> 
+			<th style="width:150px">Sat <br>Water Plants</th> </tr>
+	</thead>
+	<tbody>
+		<tr> <td></td> <td>1</td> <td>2</td> <td>3</td> <td>4</td> <td>5</td> <td>6 RS</td> </tr>
+		<tr> <td>7</td> <td>8</td> <td>9</td> <td>10</td> <td>11</td> <td>12</td> <td>13</td> </tr>
+		<tr> <td>14</td> <td>15</td> <td>16</td> <td>17</td> <td>18</td> <td>19</td> <td>20</td> </tr>
+		<tr> <td>21</td> <td>22</td> <td>23</td> <td>24</td> <td>25</td> <td>26</td> <td>27</td> </tr>
+		<tr> <td>28</td> <td>29</td> <td>30</td> <td>31</td> <td></td> <td></td> <td></td> </tr>
+	</tbody>
+</table>
+
+
+<br> <br> <br> 
 <table style="margin-left: auto; margin-right: auto; text-align: center;">
 	<b>June:</b>
 	<thead>
@@ -42,6 +61,7 @@
 		<tr> <td>23/30</td> <td>24</td> <td>25</td> <td>26</td> <td>27</td> <td>28</td> <td>29</td> </tr>
 	</tbody>
 </table>
+
 
 <b>Items</b> <br>
 >Laundry - Clothes, Sheets, Towels<br>
