--- a/html/gamedev.html
+++ b/html/gamedev.html
@@ -26,7 +26,9 @@
 
 <h2>Video Game Development Homepage</h2>
 
-Here is the text to reference: <a href="http://gameprogrammingpatterns.com/contents.html">Game Programming Patterns</a> by Robert Nystrom <br><br>
+Here are the texts to reference: <br>
+<a href="http://gameprogrammingpatterns.com/contents.html">Game Programming Patterns</a> by Robert Nystrom <br>
+Game Mechanics: Advanced Game Design<br><br>
 
 <b>Here are some creative ideas I've jotted down</b> <br>
 
@@ -79,6 +81,15 @@ Mediums I Want To Use To Express These Themes <br>
 -ArtPiece <br>
 -3d Render/Video <br>
 -Literature <br>
+
+<br><br>
+<b>Game design patterns of risk of rain that I enjoy</b> <br>
+-Time = Difficulty <br>
+-Lore/storytelling <br>
+-Flash Game style platforming <br>
+-Ability to transform it into any style of game kinda (providence trials) <br>
+
+
 </div1>
 
 </body>
