--- a/html/media.html
+++ b/html/media.html
@@ -28,18 +28,25 @@
 <table>
 	<tr><td>
 		<table>
-			<th><img src="../images/Reviews/fmb-cover.jpg" width=200px></th>
-			
-			<th style="width: 250px;">Name: Flying Microtonal Banana <br><br> Date: Feb 24, 2017 <br><br> Creator: King Gizzard & the Lizard Wizard <br><br> score: 10/10 <br><br> Favorite Song: Nuclear Fusion <br><br> </th>
-
-			<th style="width: 700px;">>thoughts: a perfect album, a unique sound <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum condimentum fermentum sapien in congue. Ut massa risus, faucibus ac risus eu, facilisis maximus libero. Sed non massa dignissim risus tempus pretium. Curabitur ut arcu in nunc commodo dignissim. Mauris feugiat ligula lectus, at dapibus risus hendrerit quis. Nulla et efficitur nisl. Nam quis quam a ligula rutrum venenatis non eu lectus. Phasellus consectetur convallis mauris sed dictum. Maecenas eleifend turpis eget erat fringilla, nec vehicula tellus imperdiet. Nunc posuere dui non orci fermentum ultrices. Vivamus ornare rutrum consectetur. </th> 
+			<th><img src="../images/Reviews/risk-returns.jpg" width=200px></th>
+			<th style="width: 250px;">Name: Risk of Rain Returns <br><br> Release Date: 2024 <br> Finished: June 2024 <br><br> Creator: Hopoo Studio <br><br> score: 10/10 <br><br> Favorite Character: Engineer, turret homie go pew-pew <br></th>
+			<th style="width: 700px;"> Some of the most gorgeous pixel art of all time, the background on the Elder Temple and Sky Meadow are so moving. I like that this game feels kinda like a flash game with the arrow key controls and some of the providence trials. This game is HARD though, man is there a learning curve at which I through myself for many hours and runs. But despite it all the package is incredible, especially for the price tag. </th>
 		</table>
 	</td></tr>
+
 	<tr><td>
 		<table>
-			<th><img src="../images/Reviews/fmab-cover.jpg" width=200px></th>
-			<th style="width: 250px;">Name: Fullmetal Alchemist Brotherhood <br><br> Date: April 5, 2009 <br><br> Creator: Hiromu Arakawa, Animated by Bones <br><br> score: 10/10 <br><br> Favorite Character: Riza Hawkeye <br><br> </th>
-			<th style="width: 700px;">>phenomenal </th> 
+			<th><img src="../images/Reviews/mahoyo.jpg" width=200px></th>
+			<th style="width: 250px;">Name: Witch On The Holy Night <br><br> Date: 2023 <br> Finished: January 2024 <br><br> Creator: Type-Moon <br><br> score: 10/10 <br><br> Favorite Character: Aoko Aozaki, cool beam lady; Soujyuuro is also really cool <br></th>
+			<th style="width: 700px;"> The first high budget visual novel I've finished, and I think it's a really good one. Effects are super cool whenever there is cool stuff, and the art and music is super nice so it's cool how they're able to amp up a book. Power system is cool, and the general style is a great sell for the other type-moon works. I'm excited for Tsukihime and Fate in english, I will play them because they will be like this. </th>
+		</table>
+	</td></tr>
+	
+	<tr><td>
+		<table>
+			<th><img src="../images/Reviews/samurai-jack.jpg" width=200px></th>
+			<th style="width: 250px;">Name: Samurai Jack Season 5 <br><br> Date: 2017 <br> Finished: Watched As It Aired <br><br> Creator: Genndy Tartakovsky <br><br> score: 10/10 <br><br> Favorite Character: Jack, incredible character <br><br> </th>
+			<th style="width: 700px;"> </th>
 		</table>
 	</td></tr>
 	<tr><td>
@@ -51,11 +58,21 @@
 	</td></tr>
 	<tr><td>
 		<table>
-			<th><img src="../images/Reviews/samurai-jack.jpg" width=200px></th>
-			<th style="width: 250px;">Name: Samurai Jack Season 5 <br><br> Date: 2017 <br> Finished: Watched As It Aired <br><br> Creator: Genndy Tartakovsky <br><br> score: 10/10 <br><br> Favorite Character: Jack, incredible character <br><br> </th>
-			<th style="width: 700px;"> </th>
+			<th><img src="../images/Reviews/fmab-cover.jpg" width=200px></th>
+			<th style="width: 250px;">Name: Fullmetal Alchemist Brotherhood <br><br> Date: April 5, 2009 <br><br> Creator: Hiromu Arakawa, Animated by Bones <br><br> score: 10/10 <br><br> Favorite Character: Riza Hawkeye <br><br> </th>
+			<th style="width: 700px;">>phenomenal </th> 
 		</table>
 	</td></tr>
+	<tr><td>
+		<table>
+			<th><img src="../images/Reviews/fmb-cover.jpg" width=200px></th>
+			
+			<th style="width: 250px;">Name: Flying Microtonal Banana <br><br> Date: Feb 24, 2017 <br><br> Creator: King Gizzard & the Lizard Wizard <br><br> score: 10/10 <br><br> Favorite Song: Nuclear Fusion <br><br> </th>
+
+			<th style="width: 700px;">>thoughts: a perfect album, a unique sound <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum condimentum fermentum sapien in congue. Ut massa risus, faucibus ac risus eu, facilisis maximus libero. Sed non massa dignissim risus tempus pretium. Curabitur ut arcu in nunc commodo dignissim. Mauris feugiat ligula lectus, at dapibus risus hendrerit quis. Nulla et efficitur nisl. Nam quis quam a ligula rutrum venenatis non eu lectus. Phasellus consectetur convallis mauris sed dictum. Maecenas eleifend turpis eget erat fringilla, nec vehicula tellus imperdiet. Nunc posuere dui non orci fermentum ultrices. Vivamus ornare rutrum consectetur. </th> 
+		</table>
+	</td></tr>
+	
 </table>
 
 <h2>Characters I love: </h2>
@@ -108,41 +125,50 @@ Anime:
 >Series: Lupin III[Jigen], Jujutsu Kaisen[Todo], Trigun[Milly], Jojo's[Mista], Cowboy Bebop[Faye], Samurai Champloo[Fu] <br>
 >Manga:  <br>
 >	<br>
-
 </div1>
 
+
 <div2 style="text-align:left; padding-left:50px">
+	To guide viewing habits, ensure things that are started are finished.  <br>
+	Also a cool log to keep, finished works go in left as a review <br>
 <h2>\Currently Viewing/</h2> 
->Reading: Western esotericism: A guide for the perplexed; Monkey <br>
->Manga: Berserk, Sakamoto Days <br>
->Watching: CyberSix, Dungeon Meshi <br>
->Playing Signalis -> P3R<br>
 
-<br>
-<b>Book List - 1 chapter per day or 1 book per 2 weeks</b>
->Selection: <br>
-
-<br>
-<b>Games List</b> <br>
->Risk of Rain Returns <br>
+<b>Games</b> <br>
 >Persona 3 Reload <br>
 >Signalis <br>
 >Elden Ring <br>
->Dragon Quest XI <br>
 >13 Sentinels <br>
->Xenoblade Chronicles <br>
+----Casual----<br>
+>Risk of Rain Returns <br>
+<br>
+<b>Anime: CyberSix, Dungeon Meshi</b> <br>
 
+<b>Manga: Berserk, Sakamoto Days</b> <br>
+
+<b>Music: </b> <br>
+
+<b>Books: Monkey (Journey To The West); Western esotericism: A guide for the perplexed</b> <br>
+
+
+<br>
+<h2>\Planning to view/</h2>
+<b>Games</b><br>
+>Dragon Quest XI <br>
+>Xenoblade Chronicles <br>
 >FF7R <br>
 >Yakuza Kiwami 1 <br>
 >Nier Replicant <br>
 >Flower <br>
 >Oblivion <br>
------------<br>
+
 >Chrono Cross <br>
 >Katamari Damacy <br>
 >Yakuza 7 <br>
-
-
+<br>
+<b>Anime</b> <br>
+<b>Manga</b> <br>
+<b>Music</b> <br>
+<b>Books</b> <br>
 
 <br>
 <h2>\Favorites/</h2>
