--- a/html/philosophical_ideas.html
+++ b/html/philosophical_ideas.html
@@ -144,6 +144,34 @@
 	</p>
 
 
+	<h2>Neuroscience of motivation</h2>
+	<br>
+	<p><b>Overview</b> <br>
+		>There are several neuroscientific circuits that we can study to understand our own patterns of thinking <br>
+		1.The hedonic circuit - Liking things, Gaba/Opioid receptor <br>
+		2.The reward circuit - Reinforces behavior that brings about a reward <br>
+		3.The effort computation circuit - Calculates the effort to reward ratio to decide if a task is worth doing <br>
+		4.The emotional circuit - Powerful effect on motivation, can increase or decrease <br>
+	</p>
+
+	<br>
+	<p><b>Dopamine Reward Circuitry</b> <br>
+		>Mesolimbic circuit and the nucleus accumbens <br>
+		>Engaging in a behaviour -> Receive some reward -> Reinforce behaviour <br>
+		>Addiction is an example of the exploitation of this circuit, too much dopamine(reward) <br>
+		<br>
+		>The principle of tolerance, which explains how exposure in the brain to a substance limits its effect over time, can also be applied to dopamine <br>
+		>As we interact with something we find pleasurable, we can end up decreasing the pleasure received over exposure time. A game is less fun on hour 3 than hour 1 <br>
+		>Because technology is entertaining such that we can receive more dopamine, the reinforcement of engaging with can be naturally higher <br>
+		>But this can also hamper activities that traditionally gave dopamine, but that don't match the scale of our current technology uses. <br>
+		>If the reward is not as high we are less likely to engage. This is true for regulalr activities seeming unappealing compares to; but also people with dopamine tolerance who can only achieve it through unusually high sources like technology <br>
+	</p>
+
+	<br>
+	<p><b>Hedonic Circuitry</b>
+		>Prediction-Reward-Error processing, and issues leading to procrastination
+
+
 </div1>
 
 <div2>
