--- a/index.html
+++ b/index.html
@@ -49,8 +49,11 @@ hj<!DOCTYPE html>
 			<h2>Sidebar - Links</h2>
 			<b><a href="html/wizard.html">wizardry</a></b> <br>
 			
+			<h3>Life Notes</h3>
+			<b><a href="html/diet.html">Food</a></b>  <br>
+			<b><a href="html/exercise.html">Exercise</a></b>  <br>
+
 			<h3>Ideas</h3>
-			<b><a href="html/aesthetic_ideas.html">Aesthetic Ideas</a></b> <br>
 			<b><a href="html/philosophical_ideas.html">Philosophical Ideas</a></b>  <br>
 			<b><a href="html/eastern_philosophy.html">Eastern Philosophy</a></b>  <br>
 			<b><a href="html/western_philosophy.html">Western Philosophy</a></b>  <br>
@@ -58,15 +61,13 @@ hj<!DOCTYPE html>
 			<h3>Learning Topics</h3>
 			<b><a href="html/astronomy.html">\Astronomy/</a></b>  <br>
 			<b><a href="html/mythology.html">\Mythology/</a></b>  <br>
-			<b><a href="html/esotericism.html">\Esotericism/</a></b>  <br><br>
-			
-			<b><a href="html/diet.html">Food</a></b>  <br>
-			<b><a href="html/exercise.html">Exercise</a></b>  <br><br>
-
+			<b><a href="html/esotericism.html">\Esotericism/</a></b>  <br>
 			<b><a href="html/botany.html">Botany</a></b>  <br>
+			<br>
 			<b><a href="html/fighting-game.html">Fighting Game Wiki</a></b>  <br>
 
-			<h3>Creations</h3>
+			<h3>Art/Creations</h3>
+			<b><a href="html/aesthetic_ideas.html">Aesthetic Ideas</a></b> <br>
 			<b><a href="html/gamedev.html">Gamedev</a></b> <br>
 
 			<img src="Gifs/shrooms.gif" style="width:300px;"> <br>
