--- a/html/blog.html
+++ b/html/blog.html
@@ -23,10 +23,15 @@
 <div class="centerpiece">
 <div1 style="text-align:center">
 
+<b>2024-07-08</b> <br>
+>About Elden Ring: I feel my losses more strongly than my wins, I am not the popoff type <br>
+
+<br>
 <b>2024-07-05</b> <br>
 >Statements worth becoming thought generating machines <br>
->Weed, seperate spaces
+>Weed, seperate spaces <br>
 
+<br>
 <b>2024-07-02</b> <br>
 >Discussing art, a few ideas worth writing down <br>
 >Dichotomy of replayability focus vs single playthrough cinematic experience <br>
