--- a/html/media.html
+++ b/html/media.html
@@ -141,13 +141,13 @@ Anime:
 ----Casual----<br>
 >Risk of Rain Returns <br>
 <br>
-<b>Anime: CyberSix, Dungeon Meshi</b> <br>
+<b>Anime:</b> Dungeon Meshi, CyberSix? <br>
 
-<b>Manga: Berserk, Sakamoto Days</b> <br>
+<b>Manga:</b> Berserk <br>
 
-<b>Music: </b> <br>
+<b>Music:</b> <br>
 
-<b>Books: Monkey (Journey To The West); Western esotericism: A guide for the perplexed</b> <br>
+<b>Books:</b> Monkey (Journey To The West)<br>
 
 
 <br>
