--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@ hj<!DOCTYPE html>
 			<h3>Art/Creations</h3>
 			<b><a href="html/aesthetic_ideas.html">Aesthetic Ideas</a></b> <br>
 			<b><a href="html/gamedev.html">Gamedev</a></b> <br>
+			<b><a href="html/drawing.html">Drawing</a></b> <br>
+			<b><a href="html/3d.html">3d Modelling</a></b> <br>
 
 			<img src="Gifs/shrooms.gif" style="width:300px;"> <br>
 			
